--- a/translations/Settings/res/values-ru/strings.xml
+++ b/translations/Settings/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
-    <string name="additional_system_update" />
-    <string name="additional_system_update_menu" />
+    <string name="additional_system_update"></string>
+    <string name="additional_system_update_menu"></string>
     <string name="input_method_selector_show_automatically_value">0</string>
     <string name="input_method_selector_always_show_value">1</string>
     <string name="input_method_selector_always_hide_value">2</string>
@@ -114,7 +114,7 @@
     <string name="bluetooth_disconnected">Отключено</string>
     <string name="bluetooth_disconnecting">Отключение...</string>
     <string name="bluetooth_connecting">Подключение...</string>
-    <string name="bluetooth_unknown" />
+    <string name="bluetooth_unknown"></string>
     <string name="bluetooth_pairing">Сопряжение...</string>
     <string name="bluetooth_device">Bluetooth-устройство без названия</string>
     <string name="progress_scanning">Поиск</string>
@@ -270,7 +270,7 @@
     <string name="lock_after_timeout_summary">После %1$s спящего режима</string>
     <string name="show_owner_info_on_lockscreen_label">Показывать данные о владельце на экране блокировки</string>
     <string name="owner_info_settings_title">Сведения о владельце</string>
-    <string name="owner_info_settings_summary" />
+    <string name="owner_info_settings_summary"></string>
     <string name="owner_info_settings_edit_text_hint">Введите текст для показа на экране блокировки</string>
     <string name="location_settings_title">Местоположение</string>
     <string name="security_settings_title">Безопасность</string>
@@ -307,7 +307,7 @@
     <string name="unlock_set_unlock_launch_picker_enable_summary">Выбрать метод блокировки экрана</string>
     <string name="unlock_backup_info_summary">Выберите альтернативный способ разблокировки экрана</string>
     <string name="unlock_set_unlock_off_title">Нет</string>
-    <string name="unlock_set_unlock_off_summary" />
+    <string name="unlock_set_unlock_off_summary"></string>
     <string name="unlock_set_unlock_none_title">Отключено</string>
     <string name="unlock_set_unlock_none_summary">Защита отключена</string>
     <string name="unlock_set_unlock_biometric_weak_title">Фейсконтроль</string>
@@ -490,7 +490,7 @@
     <string name="wifi_remembered">Сохранено</string>
     <string name="wifi_disabled_generic">Отключено</string>
     <string name="wifi_disabled_network_failure">Включено</string>
-    <string name="wifi_disabled_heading" />
+    <string name="wifi_disabled_heading"></string>
     <string name="wifi_disabled_help">Сеть отклонена, так как соединение неустойчивое. Чтобы изменить параметры, выберите \"Настройки > Wi-Fi\" и откройте меню \"Дополнительно\"</string>
     <string name="wifi_disabled_password_failure">Ошибка аутентификации</string>
     <string name="wifi_not_in_range">Недоступна</string>
@@ -586,7 +586,7 @@
     <string name="sound_settings">Параметры звука</string>
     <string name="silent_mode_title">Режим \"Без звука\"</string>
     <string name="ringtone_title">Мелодия по умолчанию</string>
-    <string name="ringtone_summary" />
+    <string name="ringtone_summary"></string>
     <string name="all_volume_title">Громкость</string>
     <string name="musicfx_title">Эквалайзер</string>
     <string name="ring_volume_title">Громкость звонка</string>
@@ -674,7 +674,7 @@
     <string name="sim_enter_cancel">Отмена</string>
     <string name="device_info_settings">Состояние телефона</string>
     <string name="system_update_settings_list_item_title">Обновления системы</string>
-    <string name="system_update_settings_list_item_summary" />
+    <string name="system_update_settings_list_item_summary"></string>
     <string name="firmware_version">Android:</string>
     <string name="model_number">Модель:</string>
     <string name="baseband_version">Модем</string>
@@ -722,13 +722,13 @@
     <string name="sd_eject_summary">Отключение SD-карты для ее безопасного извлечения из устройства</string>
     <string name="sd_insert_summary">Вставить SD-карту</string>
     <string name="sd_mount">Подключить SD-карту</string>
-    <string name="sd_mount_summary" />
+    <string name="sd_mount_summary"></string>
     <string name="sd_format">Очистить SD-карту</string>
     <string name="sd_format_summary">Удаление с SD-карты телефона всех данных, включая музыку и фотографии.</string>
     <string name="read_only">" (только для чтения)"</string>
     <string name="dlg_confirm_unmount_title">Отключить SD-карту?</string>
     <string name="dlg_confirm_unmount_text">Если отключить SD-карту, некоторые приложения перестанут работать и могут оставаться недоступными до ее подключения.</string>
-    <string name="dlg_error_unmount_title" />
+    <string name="dlg_error_unmount_title"></string>
     <string name="dlg_error_unmount_text">Не удалось отключить SD-карту. Повторите попытку позже</string>
     <string name="unmount_inform_text">SD-карта будет отключена</string>
     <string name="sd_ejecting_title">Извлечение</string>
@@ -881,9 +881,9 @@
     <string name="lockpattern_change_lock_pattern_label">Изменить ключ</string>
     <string name="lockpattern_change_lock_pin_label">Изменить PIN-код разблокировки</string>
     <string name="lockpattern_need_to_unlock">Начертите существующий ключ</string>
-    <string name="lockpattern_need_to_unlock_footer" />
+    <string name="lockpattern_need_to_unlock_footer"></string>
     <string name="lockpattern_need_to_unlock_wrong">Повторить:</string>
-    <string name="lockpattern_need_to_unlock_wrong_footer" />
+    <string name="lockpattern_need_to_unlock_wrong_footer"></string>
     <string name="lockpattern_recording_intro_header">Начертите графический ключ разблокировки</string>
     <string name="lockpattern_recording_intro_footer">Для справки нажмите \"Меню\"</string>
     <string name="lockpattern_recording_inprogress">По завершении отпустите палец</string>
@@ -967,7 +967,7 @@
     <string name="clear_data_dlg_text">Все данные этого приложения будут удалены без возможности восстановления, включая все файлы, базы данных, настройки, аккаунты и т. д.</string>
     <string name="dlg_ok">ОК</string>
     <string name="dlg_cancel">Отмена</string>
-    <string name="app_not_found_dlg_title" />
+    <string name="app_not_found_dlg_title"></string>
     <string name="app_not_found_dlg_text">Приложение не найдено в списке установленных</string>
     <string name="clear_data_failed">Данные не удалены</string>
     <string name="app_factory_reset_dlg_title">Удалить обновления?</string>
@@ -1033,7 +1033,7 @@
     <string name="language_settings_category">Языковые настройки</string>
     <string name="keyboard_settings_category">Клавиатура и способы ввода</string>
     <string name="phone_language">Язык</string>
-    <string name="phone_language_summary" />
+    <string name="phone_language_summary"></string>
     <string name="auto_replace">Автокоррекция</string>
     <string name="auto_replace_summary">Исправлять опечатки</string>
     <string name="auto_caps">Заглавные автоматически</string>
@@ -1050,7 +1050,7 @@
     <string name="user_dict_settings_titlebar">Словарь пользователя</string>
     <string name="user_dict_single_settings_title">Пользовательский словарь</string>
     <string name="user_dict_multiple_settings_title">Пользовательские словари</string>
-    <string name="user_dict_settings_summary" />
+    <string name="user_dict_settings_summary"></string>
     <string name="user_dict_settings_add_menu_title">Добавить</string>
     <string name="user_dict_settings_add_dialog_title">Добавление в словарь</string>
     <string name="user_dict_settings_edit_dialog_title">Изменение слова</string>
@@ -1274,7 +1274,7 @@
     <string name="credentials_reset_summary">Удалить все сертификаты</string>
     <string name="trusted_credentials">Надежные учетные данные</string>
     <string name="trusted_credentials_summary">Показывать надежные сертификаты ЦС</string>
-    <string name="credentials_unlock" />
+    <string name="credentials_unlock"></string>
     <string name="credentials_unlock_hint">Введите пароль для хранилища учетных данных</string>
     <string name="credentials_old_password">Текущий пароль:</string>
     <string name="credentials_reset_hint">Удалить все содержимое?</string>
@@ -1798,4 +1798,6 @@ Please check validity of certificates."</string>
     <string name="drive_mode_only_contact_reply">Отвечать только людям из контактного списка</string>
     <string name="drive_mode_auto_sms_reply_content">Извините, я сейчас за рулем. Я перезвоню вам позже.</string>
     <string name="drive_mode_auto_sms_reply_content_title">Содержание сообщения</string>
+    <string name="overclocktool_title">Overclock Tool</string>
+    <string name="header_category_advanced">CPU CONTROL</string>
 </resources>
