--- a/translations/Settings/res/values-el/strings.xml
+++ b/translations/Settings/res/values-el/strings.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
-    <string name="additional_system_update" />
-    <string name="additional_system_update_menu" />
+    <string name="additional_system_update"></string>
+    <string name="additional_system_update_menu"></string>
     <string name="input_method_selector_show_automatically_value">0</string>
     <string name="input_method_selector_always_show_value">1</string>
     <string name="input_method_selector_always_hide_value">2</string>
@@ -114,7 +114,7 @@
     <string name="bluetooth_disconnected">Αποσυνδέθηκε</string>
     <string name="bluetooth_disconnecting">Αποσύνδεση…</string>
     <string name="bluetooth_connecting">Σύνδεση…</string>
-    <string name="bluetooth_unknown" />
+    <string name="bluetooth_unknown"></string>
     <string name="bluetooth_pairing">Σύζευξη…</string>
     <string name="bluetooth_device">handsfree/ακουστικά</string>
     <string name="progress_scanning">Σάρωση</string>
@@ -270,7 +270,7 @@
     <string name="lock_after_timeout_summary">%1$s after sleep</string>
     <string name="show_owner_info_on_lockscreen_label">Εμφάνιση πληροφοριών ιδιοκτήτη στην οθόνη κλειδώματος</string>
     <string name="owner_info_settings_title">Πληροφορίες ιδιοκτήτη</string>
-    <string name="owner_info_settings_summary" />
+    <string name="owner_info_settings_summary"></string>
     <string name="owner_info_settings_edit_text_hint">Πληκτρολογήστε το κείμενο που θα φαίνεται στην οθόνη κλειδώματος</string>
     <string name="location_settings_title">Υπηρεσίες τοποθεσίας</string>
     <string name="security_settings_title">Ασφάλεια</string>
@@ -307,7 +307,7 @@
     <string name="unlock_set_unlock_launch_picker_enable_summary">Επιλέξτε μέθοδο κλειδώματος της οθόνης</string>
     <string name="unlock_backup_info_summary">Όταν αποτύχει η αναγνώριση προσώπου πως θέλετε να ξεκλειδώσετε το τηλέφωνο σας;</string>
     <string name="unlock_set_unlock_off_title">Κανένα</string>
-    <string name="unlock_set_unlock_off_summary" />
+    <string name="unlock_set_unlock_off_summary"></string>
     <string name="unlock_set_unlock_none_title">Κύλιση</string>
     <string name="unlock_set_unlock_none_summary">Χωρίς ασφάλεια</string>
     <string name="unlock_set_unlock_biometric_weak_title">Face Unlock</string>
@@ -370,7 +370,7 @@
     <string name="bluetooth_display_passkey_pin_msg">Για σύζευξη με:&lt;br>&lt;b>%1$s&lt;/b>&lt;br>&lt;br>Πληκοτρολογήστε:&lt;br>&lt;b>%2$s&lt;/b>, μετά πατήστε Enter.</string>
     <string name="bluetooth_pairing_accept">Σύζευξη</string>
     <string name="bluetooth_pairing_decline">Άκυρο</string>
-    <string name="bluetooth_error_title" />
+    <string name="bluetooth_error_title"></string>
     <string name="bluetooth_pairing_error_message">Αδύνατη η σύζευξη με %1$s.</string>
     <string name="bluetooth_pairing_pin_error_message">Αδύνατη η σύζευξη με το %1$s λόγω λανθασμένου PIN ή κωδικού.</string>
     <string name="bluetooth_pairing_device_down_error_message">Αδύνατη η επικοινωνία με το %1$s.</string>
@@ -487,7 +487,7 @@
     <string name="wifi_remembered">Αποθηκευμένο</string>
     <string name="wifi_disabled_generic">Απενεργοποθημένο</string>
     <string name="wifi_disabled_network_failure">Έχει αποφευχθεί κακή σύνδεση με το internet</string>
-    <string name="wifi_disabled_heading" />
+    <string name="wifi_disabled_heading"></string>
     <string name="wifi_disabled_help">Το δίκτυο έχει αποφευχθεί λόγω κακής σύνδεσης. Turn off this behavior from the Settings > Wi-Fi screen, Advanced menu item.</string>
     <string name="wifi_disabled_password_failure">Πρόβλημα ταυτοποίησης</string>
     <string name="wifi_not_in_range">Εκτός εμβέλειας</string>
@@ -583,7 +583,7 @@
     <string name="sound_settings">Ήχος</string>
     <string name="silent_mode_title">Αθόρυβο</string>
     <string name="ringtone_title">Ήχος κλήσης</string>
-    <string name="ringtone_summary" />
+    <string name="ringtone_summary"></string>
     <string name="all_volume_title">Εντάσεις</string>
     <string name="musicfx_title">Μουσικά εφέ</string>
     <string name="ring_volume_title">Ένταση κουδουνίσματος</string>
@@ -669,7 +669,7 @@
     <string name="sim_enter_cancel">Άκυρο</string>
     <string name="device_info_settings">Κατάσταση τηλεφώνου</string>
     <string name="system_update_settings_list_item_title">Ενημερώσεις συστήματος</string>
-    <string name="system_update_settings_list_item_summary" />
+    <string name="system_update_settings_list_item_summary"></string>
     <string name="firmware_version">Έκδοση Android:</string>
     <string name="model_number">Μοντέλο:</string>
     <string name="baseband_version">Έκδοση μόντεμ</string>
@@ -717,13 +717,13 @@
     <string name="sd_eject_summary">Αποσυνδέστε την κάρτα SD ώστε να την αφαιρέσετε με ασφάλεια</string>
     <string name="sd_insert_summary">Εισάγετε μια κάρτα SD για σύνδεση</string>
     <string name="sd_mount">Σύνδεση κάρτας SD</string>
-    <string name="sd_mount_summary" />
+    <string name="sd_mount_summary"></string>
     <string name="sd_format">Διαγραφή κάρτας SD</string>
     <string name="sd_format_summary">Διαγράφει όλα τα δεδομένα της κάρτας SD, όπως μουσική και φωτογραφίες</string>
     <string name="read_only">" (Μόνο για ανάγνωση)"</string>
     <string name="dlg_confirm_unmount_title">Αποσύνδεση κάρτας SD;</string>
     <string name="dlg_confirm_unmount_text">Εάν αποσυνδέσετε την κάρτα SD, μερικές εφαρμογές που χρησιμοποιήτε θα σταματήσουν και δε θα είναι διαθέσιμες μέχρι να ξανασυνδέσετε την κάρτα SD.</string>
-    <string name="dlg_error_unmount_title" />
+    <string name="dlg_error_unmount_title"></string>
     <string name="dlg_error_unmount_text">Αδύνατη η αποσύνδεση της κάρτας SD. Δοκιμάστε αργότερα.</string>
     <string name="unmount_inform_text">Η κάρτα SD θα αποσυνδεθεί.</string>
     <string name="sd_ejecting_title">Αποσύνδεση</string>
@@ -769,7 +769,7 @@
     <string name="menu_new">Νέο APN</string>
     <string name="menu_save">Αποθήκευση</string>
     <string name="menu_cancel">Απόρριψη</string>
-    <string name="error_title" />
+    <string name="error_title"></string>
     <string name="error_name_empty">Το πεδίο Όνομα δε μπορεί να είναι κενό.</string>
     <string name="error_apn_empty">Το σημείο πρόσβασης δε μπορεί να είναι κενό.</string>
     <string name="error_mcc_not3">Το πεδίο MCC πρέπει να αποτελείται από 3 ψηφία.</string>
@@ -867,9 +867,9 @@
     <string name="lockpattern_change_lock_pattern_label">Αλλαγή μοτίβου ξεκλειδώματος</string>
     <string name="lockpattern_change_lock_pin_label">Αλλαγή PIN</string>
     <string name="lockpattern_need_to_unlock">Επιβεβαίωση αποθηκευμένου μοτίβου</string>
-    <string name="lockpattern_need_to_unlock_footer" />
+    <string name="lockpattern_need_to_unlock_footer"></string>
     <string name="lockpattern_need_to_unlock_wrong">Δοκιμάστε ξανά:</string>
-    <string name="lockpattern_need_to_unlock_wrong_footer" />
+    <string name="lockpattern_need_to_unlock_wrong_footer"></string>
     <string name="lockpattern_recording_intro_header">Σχεδιάστε ένα μοτίβο ξεκλειδώματος</string>
     <string name="lockpattern_recording_intro_footer">Πατήστε Μενού για βοήθεια.</string>
     <string name="lockpattern_recording_inprogress">Αφήστε το δάχτυλό σας όταν τελειώσετε.</string>
@@ -953,7 +953,7 @@
     <string name="clear_data_dlg_text">"All this app's data will be deleted permanently. This includes all files, settings, accounts, databases, etc."</string>
     <string name="dlg_ok">OK</string>
     <string name="dlg_cancel">Άκυρο</string>
-    <string name="app_not_found_dlg_title" />
+    <string name="app_not_found_dlg_title"></string>
     <string name="app_not_found_dlg_text">"The app wasn't found in the list of installed apps."</string>
     <string name="clear_data_failed">"Couldn't clear app data."</string>
     <string name="app_factory_reset_dlg_title">Αφαίρεση ενημερώσεων;</string>
@@ -976,7 +976,7 @@
     <string name="system_package">"System updates can't be installed on external media."</string>
     <string name="force_stop_dlg_title">Τερματισμός;</string>
     <string name="force_stop_dlg_text">Εάν τερματίσετε μια εφαρμογή ενδέχεται να μη λειτουργεί σωστά.</string>
-    <string name="move_app_failed_dlg_title" />
+    <string name="move_app_failed_dlg_title"></string>
     <string name="move_app_failed_dlg_text">Αδύνατη η μετακίνηση της εφαρμογής. %1$s</string>
     <string name="app_install_location_title">Προτιμόμενη τοποθεσία εγκατάστασης</string>
     <string name="app_install_location_summary">Change the preferred installation location for new apps</string>
@@ -1019,7 +1019,7 @@
     <string name="language_settings_category">Ρυθμίσεις γλώσσας</string>
     <string name="keyboard_settings_category">Πληκτρολογιο &amp; μεθοδοι εισαγωγης</string>
     <string name="phone_language">Γλώσσα</string>
-    <string name="phone_language_summary" />
+    <string name="phone_language_summary"></string>
     <string name="auto_replace">Αυτόματη αντικατάσταση</string>
     <string name="auto_replace_summary">Διόρθωση λέξεων</string>
     <string name="auto_caps">Αυτόματη εισαγωγή κεφαλαίων</string>
@@ -1028,7 +1028,7 @@
     <string name="hardkeyboard_category">Ρυθμίσεις φυσικού πληκτρολογίου</string>
     <string name="auto_punctuate_summary">Press Space key twice to insert \".\"</string>
     <string name="show_password">Εμφάνιση κωδικών</string>
-    <string name="show_password_summary" />
+    <string name="show_password_summary"></string>
     <string name="ime_security_warning">This input method may be able to collect all the text you type, including personal data like passwords and credit card numbers. It comes from the app %1$s. Use this input method?</string>
     <string name="spellchecker_security_warning">This spell checker may be able to collect all the text you type, including personal data like passwords and credit card numbers. It comes from the app %1$s. Use this spell checker?</string>
     <string name="pointer_settings_category">Ποντικι/δεικτης</string>
@@ -1036,7 +1036,7 @@
     <string name="user_dict_settings_titlebar">Λεξικό χρήστη</string>
     <string name="user_dict_single_settings_title">Λεξικό χρήστη</string>
     <string name="user_dict_multiple_settings_title">Λεξικά χρήστη</string>
-    <string name="user_dict_settings_summary" />
+    <string name="user_dict_settings_summary"></string>
     <string name="user_dict_settings_add_menu_title">Προσθήκη</string>
     <string name="user_dict_settings_add_dialog_title">Προσθήκη στο λεξικό</string>
     <string name="user_dict_settings_edit_dialog_title">Επεξεργασία λέξης</string>
@@ -1259,7 +1259,7 @@
     <string name="credentials_reset_summary">Αφαίρεση όλων των πιστοποιητικών</string>
     <string name="trusted_credentials">Ασφαλή πιστοποιητικά</string>
     <string name="trusted_credentials_summary">Προβολή ασφαλών CA πιστοποιητικών</string>
-    <string name="credentials_unlock" />
+    <string name="credentials_unlock"></string>
     <string name="credentials_unlock_hint">Type the password for credential storage.</string>
     <string name="credentials_old_password">Τρέχων κωδικός:</string>
     <string name="credentials_reset_hint">Αφαίρεση όλου του περιεχομένου;</string>
@@ -1286,7 +1286,7 @@
     <string name="local_backup_password_title">Desktop backup password</string>
     <string name="local_backup_password_summary_none">"Desktop full backups aren't currently protected."</string>
     <string name="local_backup_password_summary_change">Select to change or remove the password for desktop full backups</string>
-    <string name="backup_erase_dialog_title" />
+    <string name="backup_erase_dialog_title"></string>
     <string name="backup_erase_dialog_message">Stop backing up your Wi-Fi passwords, bookmarks, other settings, and app data, plus erase all copies on Google servers?</string>
     <string name="device_admin_settings_title">Ρυθμίσεις διαχειριστή συσκευής</string>
     <string name="active_device_admin_msg">Διαχειριστής συσκευής</string>
@@ -1354,7 +1354,7 @@
     <string name="sync_gmail">Gmail</string>
     <string name="sync_calendar">Ημερολόγιο</string>
     <string name="sync_contacts">Επαφές</string>
-    <string name="sync_plug" />
+    <string name="sync_plug"></string>
     <string name="header_application_sync_settings">Ρυθμίσεις συγχρονισμού εφαρμογών</string>
     <string name="header_data_and_synchronization">Δεδομένα &amp; συγχρονισμός</string>
     <string name="preference_change_password_title">Αλλαγή κωδικού</string>
@@ -1447,8 +1447,8 @@
     <string name="data_usage_limit_dialog">Your %1$s data connection will be disabled when the specified limit is reached. Since data usage is measured by your phone, and your carrier may account for usage differently, consider using a conservative limit.</string>
     <string name="data_usage_restrict_background_title">Restrict background data?</string>
     <string name="data_usage_restrict_background">"If you restrict background mobile data, some apps and services won't work unless you're connected to a Wi-Fi network."</string>
-    <string name="data_usage_sweep_warning" />
-    <string name="data_usage_sweep_limit" />
+    <string name="data_usage_sweep_warning"></string>
+    <string name="data_usage_sweep_limit"></string>
     <string name="data_usage_uninstalled_apps">Removed apps</string>
     <string name="data_usage_received_sent">%1$s received, %2$s sent</string>
     <string name="data_usage_total_during_range">%2$s: about %1$s used</string>
@@ -1768,4 +1768,6 @@
     <string name="drive_mode_only_contact_reply">Απάντηση μόνο σε άτομα της λίστας επαφών μου</string>
     <string name="drive_mode_auto_sms_reply_content">Λυπάμαι αλλά αυτή τη στιγμή οδηγώ. Θα επικοινωνήσω αργότερα.</string>
     <string name="drive_mode_auto_sms_reply_content_title">Περιεχόμενο μηνύματος απάντησης</string>
+    <string name="overclocktool_title">Overclock Tool</string>
+    <string name="header_category_advanced">CPU CONTROL</string>
 </resources>
