--- a/translations/Settings/res/values-en/strings.xml
+++ b/translations/Settings/res/values-en/strings.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
-    <string name="additional_system_update" />
-    <string name="additional_system_update_menu" />
+    <string name="additional_system_update"></string>
+    <string name="additional_system_update_menu"></string>
     <string name="input_method_selector_show_automatically_value">0</string>
     <string name="input_method_selector_always_show_value">1</string>
     <string name="input_method_selector_always_hide_value">2</string>
@@ -114,7 +114,7 @@
     <string name="bluetooth_disconnected">Disconnected</string>
     <string name="bluetooth_disconnecting">Disconnecting…</string>
     <string name="bluetooth_connecting">Connecting…</string>
-    <string name="bluetooth_unknown" />
+    <string name="bluetooth_unknown"></string>
     <string name="bluetooth_pairing">Pairing…</string>
     <string name="bluetooth_device">Unnamed Bluetooth device</string>
     <string name="progress_scanning">Searching</string>
@@ -270,7 +270,7 @@
     <string name="lock_after_timeout_summary">%1$s after sleep</string>
     <string name="show_owner_info_on_lockscreen_label">Show owner info on lock screen</string>
     <string name="owner_info_settings_title">Owner info</string>
-    <string name="owner_info_settings_summary" />
+    <string name="owner_info_settings_summary"></string>
     <string name="owner_info_settings_edit_text_hint">Type text to display on the lock screen</string>
     <string name="location_settings_title">Location services</string>
     <string name="security_settings_title">Security</string>
@@ -305,7 +305,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="unlock_set_unlock_launch_picker_enable_summary">Choose a method to lock the screen</string>
     <string name="unlock_backup_info_summary">"When Face Unlock can't see you, how do you want to unlock?"</string>
     <string name="unlock_set_unlock_off_title">None</string>
-    <string name="unlock_set_unlock_off_summary" />
+    <string name="unlock_set_unlock_off_summary"></string>
     <string name="unlock_set_unlock_none_title">Slide</string>
     <string name="unlock_set_unlock_none_summary">No security</string>
     <string name="unlock_set_unlock_biometric_weak_title">Face Unlock</string>
@@ -368,7 +368,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="bluetooth_display_passkey_pin_msg">To pair with:&lt;br>&lt;b>%1$s&lt;/b>&lt;br>&lt;br>Type on it:&lt;br>&lt;b>%2$s&lt;/b>, then press Return or Enter.</string>
     <string name="bluetooth_pairing_accept">Pair</string>
     <string name="bluetooth_pairing_decline">Cancel</string>
-    <string name="bluetooth_error_title" />
+    <string name="bluetooth_error_title"></string>
     <string name="bluetooth_pairing_error_message">"Couldn't pair with %1$s."</string>
     <string name="bluetooth_pairing_pin_error_message">"Couldn't pair with %1$s because of an incorrect PIN or passkey."</string>
     <string name="bluetooth_pairing_device_down_error_message">"Can't communicate with %1$s."</string>
@@ -485,7 +485,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="wifi_remembered">Saved</string>
     <string name="wifi_disabled_generic">Disabled</string>
     <string name="wifi_disabled_network_failure">Avoided poor Internet connection</string>
-    <string name="wifi_disabled_heading" />
+    <string name="wifi_disabled_heading"></string>
     <string name="wifi_disabled_help">The network was avoided due to poor connection. Turn off this behavior from the Settings > Wi-Fi screen, Advanced menu item.</string>
     <string name="wifi_disabled_password_failure">Authentication problem</string>
     <string name="wifi_not_in_range">Not in range</string>
@@ -581,7 +581,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="sound_settings">Sound</string>
     <string name="silent_mode_title">Silent mode</string>
     <string name="ringtone_title">Phone ringtone</string>
-    <string name="ringtone_summary" />
+    <string name="ringtone_summary"></string>
     <string name="all_volume_title">Volumes</string>
     <string name="musicfx_title">Music effects</string>
     <string name="ring_volume_title">Ringer volume</string>
@@ -667,7 +667,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="sim_enter_cancel">Cancel</string>
     <string name="device_info_settings">Phone status</string>
     <string name="system_update_settings_list_item_title">System updates</string>
-    <string name="system_update_settings_list_item_summary" />
+    <string name="system_update_settings_list_item_summary"></string>
     <string name="firmware_version">Android version:</string>
     <string name="model_number">Model number:</string>
     <string name="baseband_version">Baseband version</string>
@@ -715,13 +715,13 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="sd_eject_summary">Unmount the SD card so you can safely remove it</string>
     <string name="sd_insert_summary">Insert an SD card for mounting</string>
     <string name="sd_mount">Mount SD card</string>
-    <string name="sd_mount_summary" />
+    <string name="sd_mount_summary"></string>
     <string name="sd_format">Erase SD card</string>
     <string name="sd_format_summary">Erases all data on the SD card, such as music and photos</string>
     <string name="read_only">" (Read-only)"</string>
     <string name="dlg_confirm_unmount_title">Unmount SD card?</string>
     <string name="dlg_confirm_unmount_text">If you unmount the SD card, some apps you are using will stop and may be unavailable until you remount the SD card.</string>
-    <string name="dlg_error_unmount_title" />
+    <string name="dlg_error_unmount_title"></string>
     <string name="dlg_error_unmount_text">"Couldn't unmount SD card. Try again later."</string>
     <string name="unmount_inform_text">SD card will be unmounted.</string>
     <string name="sd_ejecting_title">Unmounting</string>
@@ -767,7 +767,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="menu_new">New APN</string>
     <string name="menu_save">Save</string>
     <string name="menu_cancel">Discard</string>
-    <string name="error_title" />
+    <string name="error_title"></string>
     <string name="error_name_empty">"The Name field can't be empty."</string>
     <string name="error_apn_empty">"The APN can't be empty."</string>
     <string name="error_mcc_not3">MCC field must be 3 digits.</string>
@@ -779,7 +779,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="master_clear_summary">Erases all data on phone</string>
     <string name="master_clear_desc">"This will erase all data from your phone's "</string>
     <string name="master_clear_accounts">You are currently signed into the following accounts:</string>
-    <string name="master_clear_desc_also_erases_external" />
+    <string name="master_clear_desc_also_erases_external"></string>
     <string name="master_clear_desc_erase_external_storage">"To clear music, pictures, and other user data, the "</string>
     <string name="erase_external_storage">Erase USB storage</string>
     <string name="erase_external_storage_description">Erase all the data on the internal USB storage, such as music or photos</string>
@@ -863,9 +863,9 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="lockpattern_change_lock_pattern_label">Change unlock pattern</string>
     <string name="lockpattern_change_lock_pin_label">Change unlock PIN</string>
     <string name="lockpattern_need_to_unlock">Confirm saved pattern</string>
-    <string name="lockpattern_need_to_unlock_footer" />
+    <string name="lockpattern_need_to_unlock_footer"></string>
     <string name="lockpattern_need_to_unlock_wrong">Try again:</string>
-    <string name="lockpattern_need_to_unlock_wrong_footer" />
+    <string name="lockpattern_need_to_unlock_wrong_footer"></string>
     <string name="lockpattern_recording_intro_header">Draw an unlock pattern</string>
     <string name="lockpattern_recording_intro_footer">Press Menu for help.</string>
     <string name="lockpattern_recording_inprogress">Release finger when done.</string>
@@ -949,7 +949,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="clear_data_dlg_text">"All this app's data will be deleted permanently. This includes all files, settings, accounts, databases, etc."</string>
     <string name="dlg_ok">OK</string>
     <string name="dlg_cancel">Cancel</string>
-    <string name="app_not_found_dlg_title" />
+    <string name="app_not_found_dlg_title"></string>
     <string name="app_not_found_dlg_text">"The app wasn't found in the list of installed apps."</string>
     <string name="clear_data_failed">"Couldn't clear app data."</string>
     <string name="app_factory_reset_dlg_title">Uninstall updates?</string>
@@ -972,7 +972,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="system_package">"System updates can't be installed on external media."</string>
     <string name="force_stop_dlg_title">Force stop?</string>
     <string name="force_stop_dlg_text">If you force stop an app, it may misbehave.</string>
-    <string name="move_app_failed_dlg_title" />
+    <string name="move_app_failed_dlg_title"></string>
     <string name="move_app_failed_dlg_text">"Couldn't move app. %1$s"</string>
     <string name="app_install_location_title">Preferred install location</string>
     <string name="app_install_location_summary">Change the preferred installation location for new apps</string>
@@ -1015,7 +1015,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="language_settings_category">Language settings</string>
     <string name="keyboard_settings_category">Keyboard &amp; input methods</string>
     <string name="phone_language">Language</string>
-    <string name="phone_language_summary" />
+    <string name="phone_language_summary"></string>
     <string name="auto_replace">Auto-replace</string>
     <string name="auto_replace_summary">Correct mistyped words</string>
     <string name="auto_caps">Auto-capitalization</string>
@@ -1024,7 +1024,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="hardkeyboard_category">Physical keyboard settings</string>
     <string name="auto_punctuate_summary">Press Space key twice to insert \".\"</string>
     <string name="show_password">Make passwords visible</string>
-    <string name="show_password_summary" />
+    <string name="show_password_summary"></string>
     <string name="ime_security_warning">This input method may be able to collect all the text you type, including personal data like passwords and credit card numbers. It comes from the app %1$s. Use this input method?</string>
     <string name="spellchecker_security_warning">This spell checker may be able to collect all the text you type, including personal data like passwords and credit card numbers. It comes from the app %1$s. Use this spell checker?</string>
     <string name="pointer_settings_category">Mouse/trackpad</string>
@@ -1032,7 +1032,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="user_dict_settings_titlebar">User dictionary</string>
     <string name="user_dict_single_settings_title">Personal dictionary</string>
     <string name="user_dict_multiple_settings_title">Personal dictionaries</string>
-    <string name="user_dict_settings_summary" />
+    <string name="user_dict_settings_summary"></string>
     <string name="user_dict_settings_add_menu_title">Add</string>
     <string name="user_dict_settings_add_dialog_title">Add to dictionary</string>
     <string name="user_dict_settings_edit_dialog_title">Edit word</string>
@@ -1256,7 +1256,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="credentials_reset_summary">Remove all certificates</string>
     <string name="trusted_credentials">Trusted credentials</string>
     <string name="trusted_credentials_summary">Display trusted CA certificates</string>
-    <string name="credentials_unlock" />
+    <string name="credentials_unlock"></string>
     <string name="credentials_unlock_hint">Type the password for credential storage.</string>
     <string name="credentials_old_password">Current password:</string>
     <string name="credentials_reset_hint">Remove all the contents?</string>
@@ -1283,7 +1283,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="local_backup_password_title">Desktop backup password</string>
     <string name="local_backup_password_summary_none">"Desktop full backups aren't currently protected."</string>
     <string name="local_backup_password_summary_change">Select to change or remove the password for desktop full backups</string>
-    <string name="backup_erase_dialog_title" />
+    <string name="backup_erase_dialog_title"></string>
     <string name="backup_erase_dialog_message">Stop backing up your Wi-Fi passwords, bookmarks, other settings, and app data, plus erase all copies on Google servers?</string>
     <string name="device_admin_settings_title">Device administration settings</string>
     <string name="active_device_admin_msg">Device administrator</string>
@@ -1351,7 +1351,7 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="sync_gmail">Gmail</string>
     <string name="sync_calendar">Calendar</string>
     <string name="sync_contacts">Contacts</string>
-    <string name="sync_plug" />
+    <string name="sync_plug"></string>
     <string name="header_application_sync_settings">App sync settings</string>
     <string name="header_data_and_synchronization">Data &amp; synchronization</string>
     <string name="preference_change_password_title">Change password</string>
@@ -1444,8 +1444,8 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="data_usage_limit_dialog">Your %1$s data connection will be disabled when the specified limit is reached. Since data usage is measured by your phone, and your carrier may account for usage differently, consider using a conservative limit.</string>
     <string name="data_usage_restrict_background_title">Restrict background data?</string>
     <string name="data_usage_restrict_background">"If you restrict background mobile data, some apps and services won't work unless you're connected to a Wi-Fi network."</string>
-    <string name="data_usage_sweep_warning" />
-    <string name="data_usage_sweep_limit" />
+    <string name="data_usage_sweep_warning"></string>
+    <string name="data_usage_sweep_limit"></string>
     <string name="data_usage_uninstalled_apps">Removed apps</string>
     <string name="data_usage_received_sent">%1$s received, %2$s sent</string>
     <string name="data_usage_total_during_range">%2$s: about %1$s used.</string>
@@ -1765,4 +1765,6 @@ Encryption takes an hour or more. You must start with a charged battery and keep
     <string name="drive_mode_only_contact_reply">To contact list</string>
     <string name="drive_mode_auto_sms_reply_content">Sorry, I am driving now. I will contact you later.</string>
     <string name="drive_mode_auto_sms_reply_content_title">Message reply content</string>
+    <string name="overclocktool_title">Overclock Tool</string>
+    <string name="header_category_advanced">CPU CONTROL</string>
 </resources>
