--- a/translations/Settings/res/values-nl/strings.xml
+++ b/translations/Settings/res/values-nl/strings.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <resources>
-    <string name="additional_system_update" />
-    <string name="additional_system_update_menu" />
+    <string name="additional_system_update"></string>
+    <string name="additional_system_update_menu"></string>
     <string name="input_method_selector_show_automatically_value">0</string>
     <string name="input_method_selector_always_show_value">1</string>
     <string name="input_method_selector_always_hide_value">2</string>
@@ -114,7 +114,7 @@
     <string name="bluetooth_disconnected">Verbinding verbroken</string>
     <string name="bluetooth_disconnecting">Verbinding verbreken...</string>
     <string name="bluetooth_connecting">Verbinding maken...</string>
-    <string name="bluetooth_unknown" />
+    <string name="bluetooth_unknown"></string>
     <string name="bluetooth_pairing">Koppelen...</string>
     <string name="bluetooth_device">Naamloos Bluetooth-apparaat</string>
     <string name="progress_scanning">Zoeken</string>
@@ -270,7 +270,7 @@
     <string name="lock_after_timeout_summary">%1$s na slaapstand</string>
     <string name="show_owner_info_on_lockscreen_label">Eigenaarsgegevens weergeven op vergrendeld scherm</string>
     <string name="owner_info_settings_title">Eigenaarsgegevens</string>
-    <string name="owner_info_settings_summary" />
+    <string name="owner_info_settings_summary"></string>
     <string name="owner_info_settings_edit_text_hint">Typ tekst voor weergave op vergrendeld scherm</string>
     <string name="location_settings_title">Locatieservices</string>
     <string name="security_settings_title">Beveiliging</string>
@@ -303,7 +303,7 @@
     <string name="unlock_set_unlock_launch_picker_enable_summary">Kies een methode voor schermvergrendeling</string>
     <string name="unlock_backup_info_summary">Hoe wilt u ontgrendelen als Face Unlock niet mogelijk is?</string>
     <string name="unlock_set_unlock_off_title">Geen</string>
-    <string name="unlock_set_unlock_off_summary" />
+    <string name="unlock_set_unlock_off_summary"></string>
     <string name="unlock_set_unlock_none_title">Vegen</string>
     <string name="unlock_set_unlock_none_summary">Geen beveiliging</string>
     <string name="unlock_set_unlock_biometric_weak_title">Gezicht ontgrendeling</string>
@@ -366,7 +366,7 @@
     <string name="bluetooth_display_passkey_pin_msg">Koppelen met:&lt;br>&lt;b>%1$s&lt;/b>&lt;br>&lt;br>Typ het volgende:&lt;br>&lt;b>%2$s&lt;/b> en druk op Enter.</string>
     <string name="bluetooth_pairing_accept">Koppelen</string>
     <string name="bluetooth_pairing_decline">Annuleren</string>
-    <string name="bluetooth_error_title" />
+    <string name="bluetooth_error_title"></string>
     <string name="bluetooth_pairing_error_message">Kan niet koppelen aan %1$s.</string>
     <string name="bluetooth_pairing_pin_error_message">Kan niet koppelen aan %1$s vanwege een onjuiste pincode of toegangscode.</string>
     <string name="bluetooth_pairing_device_down_error_message">Kan niet communiceren met %1$s.</string>
@@ -483,7 +483,7 @@
     <string name="wifi_remembered">Opgeslagen</string>
     <string name="wifi_disabled_generic">Uitgeschakeld</string>
     <string name="wifi_disabled_network_failure">Slechte internetverbinding vermeden</string>
-    <string name="wifi_disabled_heading" />
+    <string name="wifi_disabled_heading"></string>
     <string name="wifi_disabled_help">"Netwerk vermeden wegens slechte verbinding. U kunt het vermijden van netwerken met een slechte verbinding uitschakelen via 'Instellingen' > het scherm 'Wifi' en het menu-item 'Geavanceerd'."</string>
     <string name="wifi_disabled_password_failure">Authenticatieprobleem</string>
     <string name="wifi_not_in_range">Niet binnen bereik</string>
@@ -579,7 +579,7 @@
     <string name="sound_settings">Geluid</string>
     <string name="silent_mode_title">Stille modus</string>
     <string name="ringtone_title">Beltoon telefoon</string>
-    <string name="ringtone_summary" />
+    <string name="ringtone_summary"></string>
     <string name="all_volume_title">Volumes</string>
     <string name="musicfx_title">Muziekeffecten</string>
     <string name="ring_volume_title">Belvolume</string>
@@ -665,7 +665,7 @@
     <string name="sim_enter_cancel">Annuleren</string>
     <string name="device_info_settings">Telefoonstatus</string>
     <string name="system_update_settings_list_item_title">Systeemupdates</string>
-    <string name="system_update_settings_list_item_summary" />
+    <string name="system_update_settings_list_item_summary"></string>
     <string name="firmware_version">Android-versie</string>
     <string name="model_number">Modelnummer</string>
     <string name="baseband_version">Smalbandversie</string>
@@ -713,13 +713,13 @@
     <string name="sd_eject_summary">Ontkoppel de SD-kaart zodat u deze veilig kunt verwijderen</string>
     <string name="sd_insert_summary">Plaats een SD-kaart om deze te koppelen</string>
     <string name="sd_mount">SD-kaart koppelen</string>
-    <string name="sd_mount_summary" />
+    <string name="sd_mount_summary"></string>
     <string name="sd_format">SD-kaart wissen</string>
     <string name="sd_format_summary">"Hiermee worden alle gegevens op de SD-kaart gewist, zoals muziek en foto's"</string>
     <string name="read_only">" (Alleen-lezen)"</string>
     <string name="dlg_confirm_unmount_title">SD-kaart ontkoppelen?</string>
     <string name="dlg_confirm_unmount_text">Als u de SD-kaart ontkoppelt, worden bepaalde apps die u gebruikt, gestopt en komen deze mogelijk pas weer beschikbaar wanneer u de SD-kaart opnieuw koppelt.</string>
-    <string name="dlg_error_unmount_title" />
+    <string name="dlg_error_unmount_title"></string>
     <string name="dlg_error_unmount_text">Kan SD-kaart niet ontkoppelen. Probeer het later opnieuw.</string>
     <string name="unmount_inform_text">SD-kaart wordt ontkoppeld.</string>
     <string name="sd_ejecting_title">Ontkoppelen</string>
@@ -765,7 +765,7 @@
     <string name="menu_new">Nieuwe APN</string>
     <string name="menu_save">Opslaan</string>
     <string name="menu_cancel">Weggooien</string>
-    <string name="error_title" />
+    <string name="error_title"></string>
     <string name="error_name_empty">"Het veld 'Naam' mag niet leeg zijn."</string>
     <string name="error_apn_empty">De APN mag niet leeg zijn.</string>
     <string name="error_mcc_not3">MCC-veld moet 3 cijfers bevatten.</string>
@@ -777,7 +777,7 @@
     <string name="master_clear_summary">Alle gegevens op de telefoon wissen</string>
     <string name="master_clear_desc">Hiermee worden alle gegevens van uw telefoon gewist</string>
     <string name="master_clear_accounts">" U bent momenteel aangemeld bij de volgende accounts: "</string>
-    <string name="master_clear_desc_also_erases_external" />
+    <string name="master_clear_desc_also_erases_external"></string>
     <string name="master_clear_desc_erase_external_storage">"Als u muziek, foto's en andere gebruikersgegevens wilt wissen, moet de  "<b>SD-kaart</b>worden gewist.</string>
     <string name="erase_external_storage">SD-kaart wissen</string>
     <string name="erase_external_storage_description">"Alle gegevens op de SD-kaart wissen, zoals muziek en foto's"</string>
@@ -861,9 +861,9 @@
     <string name="lockpattern_change_lock_pattern_label">Ontgrendelingspatroon wijzigen</string>
     <string name="lockpattern_change_lock_pin_label">PIN-code voor ontgrendelen wijzigen</string>
     <string name="lockpattern_need_to_unlock">Opgeslagen patroon bevestigen</string>
-    <string name="lockpattern_need_to_unlock_footer" />
+    <string name="lockpattern_need_to_unlock_footer"></string>
     <string name="lockpattern_need_to_unlock_wrong">Probeer het opnieuw:</string>
-    <string name="lockpattern_need_to_unlock_wrong_footer" />
+    <string name="lockpattern_need_to_unlock_wrong_footer"></string>
     <string name="lockpattern_recording_intro_header">Teken een ontgrendelingspatroon</string>
     <string name="lockpattern_recording_intro_footer">"Druk op 'Menu' voor hulp."</string>
     <string name="lockpattern_recording_inprogress">Haal uw vinger van het scherm als u klaar bent.</string>
@@ -947,7 +947,7 @@
     <string name="clear_data_dlg_text">Alle gegevens van deze app worden permanent verwijderd. Dit omvat alle bestanden, instellingen, accounts, databases, enzovoort.</string>
     <string name="dlg_ok">OK</string>
     <string name="dlg_cancel">Annuleren</string>
-    <string name="app_not_found_dlg_title" />
+    <string name="app_not_found_dlg_title"></string>
     <string name="app_not_found_dlg_text">De app is niet gevonden in de lijst met geÃ¯nstalleerde apps.</string>
     <string name="clear_data_failed">Kan app-gegevens niet wissen.</string>
     <string name="app_factory_reset_dlg_title">Updates verwijderen?</string>
@@ -970,7 +970,7 @@
     <string name="system_package">Systeemupdates kunnen niet worden geÃ¯nstalleerd op externe media.</string>
     <string name="force_stop_dlg_title">Gedwongen stoppen?</string>
     <string name="force_stop_dlg_text">Als u een app gedwongen stopt, kan deze onverwacht gedrag vertonen.</string>
-    <string name="move_app_failed_dlg_title" />
+    <string name="move_app_failed_dlg_title"></string>
     <string name="move_app_failed_dlg_text">Kan app niet verplaatsen. %1$s</string>
     <string name="app_install_location_title">Voorkeursinstallatielocatie</string>
     <string name="app_install_location_summary">De voorkeursinstallatielocatie voor nieuwe apps wijzigen</string>
@@ -1013,7 +1013,7 @@
     <string name="language_settings_category">Taalinstellingen</string>
     <string name="keyboard_settings_category">Toetsenbord en invoermethoden</string>
     <string name="phone_language">Taal</string>
-    <string name="phone_language_summary" />
+    <string name="phone_language_summary"></string>
     <string name="auto_replace">Automatisch vervangen</string>
     <string name="auto_replace_summary">Corrigeer verkeerd getypte woorden</string>
     <string name="auto_caps">Automatisch hoofdlettergebruik</string>
@@ -1022,7 +1022,7 @@
     <string name="hardkeyboard_category">Instellingen voor vast toetsenbord</string>
     <string name="auto_punctuate_summary">Druk twee keer op de spatiebalk om een punt (.) in te voegen</string>
     <string name="show_password">Wachtwoorden zichtbaar maken</string>
-    <string name="show_password_summary" />
+    <string name="show_password_summary"></string>
     <string name="ime_security_warning">Deze invoermethode verzamelt mogelijk alle tekst die u typt, inclusief persoonlijke gegevens zoals wachtwoorden en creditcardnummers. De methode is afkomstig uit de app %1$s. Deze invoermethode inschakelen?</string>
     <string name="spellchecker_security_warning">Deze spellingcontrole verzamelt mogelijk alle tekst die u typt, inclusief persoonlijke gegevens zoals wachtwoorden en creditcardnummers. De service is afkomstig uit de app %1$s. Wilt u deze spellingcontrole gebruiken?</string>
     <string name="pointer_settings_category">Muis/trackpad</string>
@@ -1030,7 +1030,7 @@
     <string name="user_dict_settings_titlebar">Gebruikerswoordenboek</string>
     <string name="user_dict_single_settings_title">Persoonlijk woordenboek</string>
     <string name="user_dict_multiple_settings_title">Persoonlijke woordenboeken</string>
-    <string name="user_dict_settings_summary" />
+    <string name="user_dict_settings_summary"></string>
     <string name="user_dict_settings_add_menu_title">Toevoegen</string>
     <string name="user_dict_settings_add_dialog_title">Toevoegen aan woordenboek</string>
     <string name="user_dict_settings_edit_dialog_title">Woord bewerken</string>
@@ -1252,7 +1252,7 @@
     <string name="credentials_reset_summary">Alle certificaten verwijderen</string>
     <string name="trusted_credentials">Vertrouwde id-gegevens</string>
     <string name="trusted_credentials_summary">Vertrouwde CA-certificaten weergeven</string>
-    <string name="credentials_unlock" />
+    <string name="credentials_unlock"></string>
     <string name="credentials_unlock_hint">Typ het wachtwoord voor referentieopslag.</string>
     <string name="credentials_old_password">Huidig wachtwoord:</string>
     <string name="credentials_reset_hint">Alle inhoud verwijderen?</string>
@@ -1279,7 +1279,7 @@
     <string name="local_backup_password_title">Wachtwoord desktopback-up</string>
     <string name="local_backup_password_summary_none">Volledige back-ups naar desktops zijn momenteel niet beveiligd.</string>
     <string name="local_backup_password_summary_change">Selecteer deze optie om het wachtwoord voor volledige back-ups naar desktops te wijzigen of te verwijderen</string>
-    <string name="backup_erase_dialog_title" />
+    <string name="backup_erase_dialog_title"></string>
     <string name="backup_erase_dialog_message">Weet u zeker dat u het maken van back-ups van uw wifi-wachtwoorden, bladwijzers, andere instellingen en gegevens voor apps wilt stoppen en alle kopiëren op Google-servers wilt wissen?</string>
     <string name="device_admin_settings_title">Instellingen voor apparaatbeheer</string>
     <string name="active_device_admin_msg">Apparaatbeheerder</string>
@@ -1347,7 +1347,7 @@
     <string name="sync_gmail">Gmail</string>
     <string name="sync_calendar">Agenda</string>
     <string name="sync_contacts">Contacten</string>
-    <string name="sync_plug" />
+    <string name="sync_plug"></string>
     <string name="header_application_sync_settings">Synchronisatie-instellingen van de app</string>
     <string name="header_data_and_synchronization">Gegevens en synchronisatie</string>
     <string name="preference_change_password_title">Wachtwoord wijzigen</string>
@@ -1440,8 +1440,8 @@
     <string name="data_usage_limit_dialog">Uw %1$s gegevensverbinding wordt uitgeschakeld wanneer de gespecificeerde limiet is bereikt. Aangezien dit gegevensverbruik wordt gemeten door uw telefoon en uw provider tot een ander totaal kan komen, kunt u het beste een voorzichtige grens instellen.</string>
     <string name="data_usage_restrict_background_title">Achtergrondgegevens beperken?</string>
     <string name="data_usage_restrict_background">Als u het gebruik van mobiele achtergrondgegevens beperkt, werken sommige apps en services niet, tenzij u bent verbonden met een wifi-netwerk.</string>
-    <string name="data_usage_sweep_warning" />
-    <string name="data_usage_sweep_limit" />
+    <string name="data_usage_sweep_warning"></string>
+    <string name="data_usage_sweep_limit"></string>
     <string name="data_usage_uninstalled_apps">Verwijderde apps</string>
     <string name="data_usage_received_sent">%1$s ontvangen, %2$s verzonden</string>
     <string name="data_usage_total_during_range">%2$s: ongeveer %1$s gebruikt</string>
@@ -1761,4 +1761,6 @@
     <string name="drive_mode_only_contact_reply">Naar contactlijst</string>
     <string name="drive_mode_auto_sms_reply_content">Sorry, ik ben nu aan het rijden. Ik neem later contact met je op.</string>
     <string name="drive_mode_auto_sms_reply_content_title">Antwoord bericht inhoud</string>
+    <string name="overclocktool_title">Overclock Tool</string>
+    <string name="header_category_advanced">CPU CONTROL</string>
 </resources>
